# Slotify

./: .env_sample  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  stop.sh
slotify/: __main__.py  bot.py  config.py  loop.py  main.py  parser.py  utils.py  webscraper.py
slotify/justiz/: api.py  main.py  parser.py
slotify/morante/: api.py  api_old.py  main.py  parser.py  webscraper.py
slotify/mywellness/: api.py  main.py  parser.py
slotify/wellnest/: api.py  main.py  parser.py
tests/: __init__.py  test_live.py  test_parsers.py  test_utils.py
tests/fixtures/justiz/: available_times.json  expected.md
tests/fixtures/morante/: availability_requests.json  expected.md
tests/fixtures/mywellness/: expected.md  start_times.json
tests/fixtures/wellnest/: day_slots.json  expected.md
