[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=80" ]

[project]
name = "slotify"
version = "0.1.0"
description = "Slotify is a Python project designed to continuously search for available slots at Morante Hair Salon and send them via Telegram to you mobile device."
readme = "README.md"
authors = [
  { name = "Jannis Straus", email = "jannisstraus1408@gmail.com" },
]
requires-python = ">=3.10,<4"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "beautifulsoup4>=4.13.4,<5",
  "python-dotenv>=1.1,<2",
  "requests>=2.32.4,<3",
  "seleniumbase>=4.41.1,<4.42",
  "webdriver-manager>=4.0.2,<5",
]
scripts.slotify = "slotify.main:main"

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
]

[tool.setuptools]
packages = [ "slotify" ]

[tool.ruff]
target-version = "py312"

# Same as Black
line-length = 88
lint.select = [
  "B", # flake8-bugbear
  "C", # flake8-comprehensions
  # "D",    # pydocstyle
  "D401", # First line of docstring should be in imperative mood
  "E",    # pycodestyle errors
  "EXE",  # flake8-executable
  "F",    # pyflakes
  "I",    # isort
  "PL",   # pylint
  "RUF",  # ruff
  "W",    # pycodestyle warnings
]
lint.ignore = [
  "D100",    # Missing docstring in public module
  "D101",    # Missing docstring in public class
  "D104",    # Missing docstring in public package
  "D105",    # Missing docstring in magic method
  "E501",    # line too long, handled by black
  "PLR2004", # Magic value used in comparison, consider replacing # with a constant variable
]
lint.unfixable = [
  "F401", # Do not fix unused imports, it's annoying during development
]
lint.pydocstyle.convention = "google"

[tool.mypy]
# Ensure full coverage
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

# Restrict dynamic typing
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true

# Know exactly what you're doing
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
